fix: follow RESTful convention
