# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api
 definitions:
+  model.CreateWorkspaceRequest:
+    properties:
+      user_id:
+        type: integer
+      workspace:
+        $ref: '#/definitions/model.Workspace'
+    type: object
   model.ErrorResponse:
     properties:
       message:
@@ -53,8 +60,6 @@ definitions:
         type: string
       updatedAt:
         type: string
-      user_id:
-        type: integer
     type: object
 info:
   contact:
@@ -100,7 +105,86 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Log a user in
-  /workspace/:id:
+  /workspaces:
+    patch:
+      consumes:
+      - application/json
+      description: Update specific fields of a workspace.
+      parameters:
+      - description: Updated workspace metadata
+        in: body
+        name: workspace
+        required: true
+        schema:
+          $ref: '#/definitions/model.Workspace'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SuccessResponse'
+        "400":
+          description: JSON Parse Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Database Query Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Update workspace
+    post:
+      consumes:
+      - application/json
+      description: Create a workspace.
+      parameters:
+      - description: Workspace create request with workspace metadata and userID
+        in: body
+        name: workspace
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateWorkspaceRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SuccessResponse'
+        "400":
+          description: JSON Parse Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Database Query Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Create workspace
+  /workspaces/:id:
+    delete:
+      description: Delete a workspace by its ID.
+      parameters:
+      - description: Workspace ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SuccessResponse'
+        "400":
+          description: Illegal Workspace ID
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Database Query Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Delete workspace
     get:
       description: Get a workspace by its ID.
       parameters:
@@ -125,85 +209,4 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: Get workspace by ID
-  /workspace/create:
-    post:
-      consumes:
-      - application/json
-      description: Create a workspace.
-      parameters:
-      - description: Workspace metadata
-        in: body
-        name: workspace
-        required: true
-        schema:
-          $ref: '#/definitions/model.Workspace'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.SuccessResponse'
-        "400":
-          description: JSON Parse Error
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "500":
-          description: Database Query Error
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      summary: Create workspace
-  /workspace/delete/:id:
-    post:
-      description: Delete a workspace by its ID.
-      parameters:
-      - description: Workspace ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.SuccessResponse'
-        "400":
-          description: Illegal Workspace ID
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "500":
-          description: Database Query Error
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      summary: Delete workspace
-  /workspace/update:
-    post:
-      consumes:
-      - application/json
-      description: Update a workspace.
-      parameters:
-      - description: Updated workspace metadata
-        in: body
-        name: workspace
-        required: true
-        schema:
-          $ref: '#/definitions/model.Workspace'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.SuccessResponse'
-        "400":
-          description: JSON Parse Error
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-        "500":
-          description: Database Query Error
-          schema:
-            $ref: '#/definitions/model.ErrorResponse'
-      summary: Update workspace
 swagger: "2.0"
